# rules_r

./: .gitignore  .travis.yml  LANGUAGE.md  README.md  WORKSPACE
.github/workflows/: tests.yml
R/: BUILD  Makevars.darwin  Makevars.darwin.tpl  Makevars.linux  build.sh  check.sh.tpl  configure.empty  defs.bzl  dependencies.bzl  image.bzl  library.sh.tpl  providers.bzl  repositories.bzl  runfiles_commands.bzl  test.sh.tpl
R/container/: README.md  binary.bzl  defs.bzl  library.bzl
R/internal/: BUILD  binary.bzl  build.bzl  common.bzl  context.bzl  coverage.bzl  coverage_deps.bzl  coverage_deps_list.csv  library.bzl  os.bzl  process.bzl  shell.bzl  tar.sh  tests.bzl  versions.bzl
R/makevars/: BUILD  Makevars.darwin.sh  darwin.bzl  (+4 more)
gazelle/: BUILD  README.md  config.go  flags.go  go.mod  go.sum  io.go  io_test.go  lang.go  resolve.go  rlang.go
internal/: BUILD  collect_copy.sh  collect_links.R  os.bzl  paths.bzl  process.bzl  shell.bzl  tar.sh  versions.bzl
makevars/: Makevars.darwin.sh  makevars.bzl
scripts/: BUILD  README.md  razel.R  repo_management.R
tests/: .bazelrc  BUILD  WORKSPACE  binary.R  binary_test.sh  buildbuddy.bazelrc  coverage_test.sh  image_test.sh  init.bzl  run_reproducible_build_tests.sh  run_tests.sh  setup-bazel.sh  test_toolchain.bzl
tests/workspaceroot/: .bazelrc  BUILD.bazel  DESCRIPTION  NAMESPACE  WORKSPACE  expected_coverage.xml  workspaceroot_test.sh
tests/workspaceroot/R/: fn.R
tests/workspaceroot/src/: fn.c
tests/workspaceroot/tests/: test.R
tools/: BUILD  README.md  install_name_tool
utils/: update_package_lists.R
(+136 files in other folders)
