# Copyright 2021 The Bazel Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_r//R:defs.bzl", "r_pkg", "r_pkg_test", "r_unit_test")

r_pkg(
    name = "workspaceroot",
    srcs = [
        "DESCRIPTION",
        "LICENSE",
        "NAMESPACE",
        "R/fn.R",
        "src/fn.c",
        "tests/test.R",
    ],
    visibility = ["//visibility:public"],
)

r_unit_test(
    name = "test",
    pkg = "workspaceroot",
)

r_pkg_test(
    name = "check",
    pkg = "workspaceroot",
)
